# computer_networks_assignments

./: .gitignore  README.md
W1/: W1_Intro.doc  wireshark_capture_file.pcapng
lab01/: Makefile  hlim1626_client.cpp  hlim1626_server.py
lab02/: CMakeLists.txt  hlim1626_server.cpp
lab02/http/: HttpServer.cpp  HttpServer.hpp  HttpServerLogger.cpp
lab02/include/http/: HttpServer.hpp  HttpServerLogger.hpp
lab02/include/http/req/: Request.hpp
lab02/resources/: test.css  test.html  test.ogv
lab02/src/http/: HttpServer.cpp  HttpServerLogger.cpp
lab02/src/http/req/: Request.cpp
lab02/src/tcp/: TcpSocket.cpp
lab02/tcp/: TcpException.cpp  TcpListener.cpp  TcpSocket.cpp  TcpSocket.hpp
lab03/src/client/: SMTPClient.java
lab03/src/smtp/: SMTPRequest.java
lab04_irc/src/com/gitlab/lasoloz/irc/client/: Client.java  ClientApplication.java
lab04_irc/src/com/gitlab/lasoloz/irc/client/ui/: ClientFrame.java  (+3 more)
lab04_irc/src/com/gitlab/lasoloz/irc/message/: Message.java  MessageType.java
lab04_irc/src/com/gitlab/lasoloz/irc/server/: ClientHandler.java  ClientThread.java  MessageBundle.java  Server.java  ServerApplication.java
lab05_mandelbrot/src/com/github/lasoloz/mandelbrot/client/: ClientApplication.java  ComplexD.java  MandelbrotRenderer.java
lab05_mandelbrot/src/com/github/lasoloz/mandelbrot/message/: DrawRequest.java  TransmittedBufferedImage.java
lab05_mandelbrot/src/com/github/lasoloz/mandelbrot/server/: ClientHandler.java  MandelbrotServer.java  ServerApplication.java
lab06/: Cargo.toml
lab06/src/: lib.rs  main.rs
lab06/src/dns/: mod.rs  util.rs
